# block_blast_ml

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  long_train.yaml  phase2_v2.yaml  phase2_v3_curriculum.yaml  shaping_v1.yaml
scripts/: bakeoff_3a.py
src/app/: cli_game.py  server.py  session.py
src/app/static/: agent_play.html  index.html  manual_play.html
src/engine/: __init__.py  block.py  game.py  generator.py  grid.py  scoring.py
src/rl/: baseline.py  config.py  encoding.py  env.py  hardware.py  policy.py  train_common.py  train_ppo.py  types.py
src/rl/agents/: greedy.py  policy_agent.py  search.py
tests/: test_bitboard.py  test_block.py  test_clone.py  test_encoding.py  test_env.py  test_game.py  test_generator.py  test_greedy.py  test_grid.py  test_scoring.py  test_search.py
