[project]
name = "block-blast"
version = "0.1.0"
description = "A small headless Block Blast-style engine for humans and ML loops."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "gymnasium>=1.3.0",
    "numpy>=2.4.6",
    "pyyaml>=6.0",
    "tensorboard>=2.18.0",
    "torch>=2.0.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine", "src/app", "src/rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
